--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
-    <link rel="icon" href=/fav.png type="image/gif">
+    <link rel="icon" href="themes/hugo-profile/static/fav.png" type="image/gif">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
             rel="stylesheet">
     </noscript>
 
-    <link rel="stylesheet" href="/css/font.css" media="all">
+    <link rel="stylesheet" href="themes/hugo-profile/static/css/font.css" media="all">
 
     <meta property="og:url" content="{{ .Site.BaseURL }}">
     <meta property="og:site_name" content="{{ .Site.Title }}">
@@ -36,10 +36,10 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Poorvaj - Portfolio">
 
-    <link rel="stylesheet" href="/bootstrap-5/css/bootstrap.min.css" media="all">
-    <link rel="stylesheet" href="/css/header.css" media="all">
-    <link rel="stylesheet" href="/css/footer.css" media="all">
-    <link rel="stylesheet" href="/css/theme.css" media="all">
+    <link rel="stylesheet" href="themes/hugo-profile/static/bootstrap-5/css/bootstrap.min.css" media="all">
+    <link rel="stylesheet" href="themes/hugo-profile/static/css/header.css" media="all">
+    <link rel="stylesheet" href="themes/hugo-profile/static/css/footer.css" media="all">
+    <link rel="stylesheet" href="themes/hugo-profile/static/css/theme.css" media="all">
 
     <style>
         :root {
@@ -1148,7 +1148,7 @@
         </div> -->
     </footer>
 
-    <script src="/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+    <script src="themes/hugo-profile/static/bootstrap-5/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
