Updated work title

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                 <div class="col-12 text-center hero-content">
                     <h1 class="hero-title"><span style="color: var(--hacker-green);">B S Poorvaj Pranav</span></h1>
                     <br>
-                    <h2 class="hero-subtitle">Offensive Security Practitioner • Exploring Cloud Security</h2>
+                    <h2 class="hero-subtitle">Offensive Security Practitioner</h2>
                     <!-- <p class="lead">Welcome to my portfolio website!</p> -->
                 </div>
                 <!-- </div> -->
