Modified project hyperlink

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                                     <span class="project-tag">Web Application Pentesting</span>
                                 </div>
                                 <p>A collection of writeups on retired machines of HackTheBox</p>
-                                <a href="https://github.com/syp-karn/HTB"
+                                <a href="https://github.com/syp-karn/Writeups"
                                     class="btn btn-sm btn-outline-primary">View</a>
                             </div>
                         </div>
